@@ -1,3 +1,10 @@
+2018-09-07  Tom Tromey  <tom@tromey.com>
+
+	PR python/23615:
+	* python/python.c (execute_gdb_command): Use gdbpy_allow_threads.
+	(gdbpy_parse_and_eval): Likewise.
+	* python/python-internal.h (gdbpy_allow_threads): New class.
+
 2018-10-10  Gary Benson <gbenson@redhat.com>
 
 	* remote.c (remote_target::remote_send_printf): Add
